--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "budg-flask"
+name = "budg"
 version = "0.1.0"
 description = ""
 authors = ["Kyle Bouwman <kybouw@gmail.com>"]
@@ -7,12 +7,13 @@ license = "Apache 2.0"
 readme = "README.md"
 
 packages = [
-    { include = "budg-flask" }
+    { include = "budg" }
 ]
 
 [tool.poetry.dependencies]
 python = "^3.12"
 Flask = "^3.0.0"
+gunicorn = "^21.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.10.1"
